fix: adicionando rota no swagger e melhorando o Makefile
